k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hockeytrainer
  namespace: hockeytrainer
  labels:
    app: hockeytrainer
  annotations:
    app: hockeytrainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hockeytrainer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: hockeytrainer
      namespace: hockeytrainer
      labels:
        app: hockeytrainer
      annotations:
        app: hockeytrainer
    spec:
      containers:
      - name: hockeytrainer
        image: smarman/hockeytrainer:0.0.3-arm
        command: ['./bin/run.sh']
        imagePullPolicy: Always
          #livenessProbe:
          #  httpGet:
          #    path: /about
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 60
        ports:
        - containerPort: 8080
        stdin: true
        tty: true
      restartPolicy: Always
status:
