k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hockeytrainer-svc
  namespace: hockeytrainer
  labels:
    app: hockeytrainer
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30082
  selector:
    app: hockeytrainer
  type: NodePort
